*** 2.11.0 (2022-05-02)
    - New translation: Italian.
    - Updated translations: French and Norwegian Bokmål.
    - Screens with aspect ratios between 1.86 and 2.1 should no longer have
      black bars appear at the top or bottom of the screen.

*** 2.10.0 (2022-03-28)
    - New delay type: Capped Fischer.

*** 2.9.0 (2022-02-06)
    - New translation: Turkish, by Alparslan Şakçi.

*** 2.8.0 (2022-01-10)
    - New translation: German, by Petra Mirelli.
    - Bugfix: The alarm now stops playing when hitting the reset button.

*** 2.7.0 (2022-01-01)
    - New translation: Spanish, by Daniel Garcia Pallaviccini.

*** 2.6.2 (2021-09-20)
    - Fixed a bug where Bronstein delay games with no initial time would run
      into negative time.
    - Bronstein delays are displayed on the same line as the total time again
      when decisecond display is disabled.

*** 2.6.1 (2021-09-12)
    - Text fixes.

*** 2.6.0 (2021-09-04)
    - New translation: French, by Sitavi.

*** 2.5.1 (2021-08-21)
    - The about screen is now scrollable to be readable when there is less
      screen space.

*** 2.5.0 (2021-06-19)
    - Game time and delay can be specified in seconds, minutes or hours.
    - Time display shows hours.
    - Time display can optionally show deciseconds.

*** 2.4.1 (2021-06-12)
    - Fixed the pause button for Bronstein delay games with no initial time.

*** 2.4.0 (2021-05-30)
    - Players can now have different initial game time.

*** 2.3.0 (2021-05-28)
    - Bronstein delay games with no initial time is now supported.

*** 2.2.1 (2021-02-07)
    - With Fischer delay, the extra time is now added at the end of player
      turns, instead of at the beginning.

*** 2.2.0 (2020-07-06)
    - Added an option to use a black background on the main game screen for
      potential power savings with OLED screens.

*** 2.1.2 (2019-05-30)
    - Fixed a bug causing player 1 to sometimes not receive the initial delay.