@@ -21,5 +21,4 @@
   </application>
   <uses-sdk android:minSdkVersion="21"
             android:targetSdkVersion="23" />
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
