@@ -1,3 +1,8 @@
+*** ?.?.? (TBD)
+    - The app no longer requires a special wake lock permission for keeping the
+      screen turned on, but uses another technique instead which might also
+      turn out beneficial to CPU and power usage.
+
 *** 2.11.0 (2022-05-02)
     - New translation: Italian.
     - Updated translations: French and Norwegian Bokmål.
